Support JDK17 (#99)
* Support JDK17

* Add script to remove deprecated config and use elytron instead

* Reduced the 'add-opens' options